# codecity

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  README.md  catalog-info.yaml  docker-compose.yml
.github/: dependabot.yml
backend/: BUILD.bazel  Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs
backend/src/api/: mod.rs
backend/src/git/: mod.rs
backend/src/github/: mod.rs
frontend/: BUILD.bazel  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  buildings.js  colors.js  main.js  scene.js  ui.js
k8s/: BUILD.bazel  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
scripts/: deploy-k8s.sh
