"""BUILD file for CodeCity Kubernetes deployment."""

load("@bazel_skylib//rules:write_file.bzl", "write_file")

package(default_visibility = ["//visibility:public"])

# All K8s manifests
filegroup(
    name = "manifests",
    srcs = glob(["*.yaml"]),
)

# Script to deploy to Kubernetes (manifests only)
write_file(
    name = "deploy_script",
    out = "deploy.sh",
    content = [
        "#!/bin/bash",
        "set -euo pipefail",
        "",
        "# Find the repository root",
        "find_repo_root() {",
        "    local dir=\"$PWD\"",
        "    while [[ \"$dir\" != \"/\" ]]; do",
        "        if [[ -f \"$dir/MODULE.bazel\" ]]; then",
        "            echo \"$dir\"",
        "            return 0",
        "        fi",
        "        dir=$(dirname \"$dir\")",
        "    done",
        "    echo \"$PWD\"",
        "}",
        "",
        "REPO_ROOT=$(find_repo_root)",
        "K8S_DIR=\"$REPO_ROOT/k8s\"",
        "",
        "if [[ ! -f \"$K8S_DIR/kustomization.yaml\" ]]; then",
        "    echo 'Error: Could not find k8s manifests directory'",
        "    exit 1",
        "fi",
        "",
        "echo 'Deploying CodeCity to Kubernetes...'",
        "kubectl apply -k \"$K8S_DIR\"",
        "",
        "echo ''",
        "echo 'Waiting for deployments to be ready...'",
        "kubectl rollout status deployment/codecity-backend -n codecity --timeout=120s",
        "kubectl rollout status deployment/codecity-frontend -n codecity --timeout=120s",
        "",
        "echo ''",
        "echo 'Deployment complete!'",
        "echo ''",
        "echo 'Access the application:'",
        "echo '  kubectl port-forward -n codecity svc/frontend 3000:80'",
        "echo '  Then open: http://localhost:3000'",
    ],
)

sh_binary(
    name = "deploy",
    srcs = [":deploy_script"],
)

# Script to tear down the deployment
write_file(
    name = "teardown_script",
    out = "teardown.sh",
    content = [
        "#!/bin/bash",
        "set -euo pipefail",
        "",
        "echo 'Tearing down CodeCity deployment...'",
        "kubectl delete namespace codecity --ignore-not-found",
        "echo 'Teardown complete!'",
    ],
)

sh_binary(
    name = "teardown",
    srcs = [":teardown_script"],
)

# Port-forward helper script
write_file(
    name = "port_forward_script",
    out = "port_forward.sh",
    content = [
        "#!/bin/bash",
        "echo 'Starting port-forward...'",
        "echo 'Frontend: http://localhost:3000'",
        "echo 'Backend API: http://localhost:3001'",
        "echo ''",
        "echo 'Press Ctrl+C to stop'",
        "",
        "kubectl port-forward -n codecity svc/frontend 3000:80 &",
        "PID1=$!",
        "kubectl port-forward -n codecity svc/backend 3001:3001 &",
        "PID2=$!",
        "",
        "trap 'kill $PID1 $PID2 2>/dev/null' EXIT",
        "wait",
    ],
)

sh_binary(
    name = "port_forward",
    srcs = [":port_forward_script"],
)

# Status check script
write_file(
    name = "status_script",
    out = "status.sh",
    content = [
        "#!/bin/bash",
        "echo '=== CodeCity Kubernetes Status ==='",
        "echo ''",
        "echo 'Namespace:'",
        "kubectl get namespace codecity 2>/dev/null || echo '  Not found'",
        "echo ''",
        "echo 'Pods:'",
        "kubectl get pods -n codecity 2>/dev/null || echo '  No pods found'",
        "echo ''",
        "echo 'Services:'",
        "kubectl get services -n codecity 2>/dev/null || echo '  No services found'",
        "echo ''",
        "echo 'Ingress:'",
        "kubectl get ingress -n codecity 2>/dev/null || echo '  No ingress found'",
    ],
)

sh_binary(
    name = "status",
    srcs = [":status_script"],
)

# Full deployment script - builds images, loads to cluster, deploys
write_file(
    name = "deploy_all_script",
    out = "deploy_all.sh",
    content = [
        "#!/bin/bash",
        "set -euo pipefail",
        "",
        "echo '=== CodeCity Kubernetes Deployment ==='",
        "echo ''",
        "",
        "# Find repo root - need to escape bazel output directories",
        "if [[ \"$PWD\" == *\"bazel-\"* ]]; then",
        "    # Extract the workspace path from BUILD_WORKSPACE_DIRECTORY if available",
        "    if [[ -n \"${BUILD_WORKSPACE_DIRECTORY:-}\" ]]; then",
        "        REPO_ROOT=\"$BUILD_WORKSPACE_DIRECTORY\"",
        "    else",
        "        # Try to find it by walking up and looking for MODULE.bazel",
        "        REPO_ROOT=\"$PWD\"",
        "        while [[ \"$REPO_ROOT\" == *\"bazel-\"* ]]; do",
        "            REPO_ROOT=$(dirname \"$REPO_ROOT\")",
        "        done",
        "        # Now find MODULE.bazel",
        "        while [[ \"$REPO_ROOT\" != \"/\" && ! -f \"$REPO_ROOT/MODULE.bazel\" ]]; do",
        "            REPO_ROOT=$(dirname \"$REPO_ROOT\")",
        "        done",
        "    fi",
        "else",
        "    REPO_ROOT=\"$PWD\"",
        "    while [[ \"$REPO_ROOT\" != \"/\" && ! -f \"$REPO_ROOT/MODULE.bazel\" ]]; do",
        "        REPO_ROOT=$(dirname \"$REPO_ROOT\")",
        "    done",
        "fi",
        "",
        "cd \"$REPO_ROOT\"",
        "echo \"Working from: $REPO_ROOT\"",
        "",
        "# Detect K8s environment",
        "detect_k8s_env() {",
        "    if command -v minikube &> /dev/null && minikube status &> /dev/null; then",
        "        echo 'minikube'",
        "    elif command -v kind &> /dev/null && kind get clusters 2>/dev/null | grep -q .; then",
        "        echo 'kind'",
        "    elif kubectl config current-context 2>/dev/null | grep -q 'docker-desktop'; then",
        "        echo 'docker-desktop'",
        "    else",
        "        echo 'unknown'",
        "    fi",
        "}",
        "",
        "K8S_ENV=$(detect_k8s_env)",
        "echo \"Detected Kubernetes environment: $K8S_ENV\"",
        "echo ''",
        "",
        "echo '=== Step 1: Building container images ==='",
        "echo ''",
        "",
        "# Use Docker build for cross-platform compatibility",
        "echo 'Building backend image...'",
        "docker build -t codecity-backend:latest \"$REPO_ROOT/backend\"",
        "",
        "echo ''",
        "echo 'Building frontend image...'",
        "docker build -t codecity-frontend:latest \"$REPO_ROOT/frontend\"",
        "",
        "case $K8S_ENV in",
        "    minikube)",
        "        echo ''",
        "        echo 'Loading images into minikube...'",
        "        minikube image load codecity-backend:latest",
        "        minikube image load codecity-frontend:latest",
        "        ;;",
        "    kind)",
        "        CLUSTER=$(kind get clusters | head -1)",
        "        echo ''",
        "        echo \"Loading images into kind cluster: $CLUSTER\"",
        "        kind load docker-image codecity-backend:latest --name \"$CLUSTER\"",
        "        kind load docker-image codecity-frontend:latest --name \"$CLUSTER\"",
        "        ;;",
        "    docker-desktop)",
        "        echo 'Images available in Docker Desktop Kubernetes'",
        "        ;;",
        "    *)",
        "        echo 'Warning: Unknown K8s environment. Images built to Docker only.'",
        "        ;;",
        "esac",
        "",
        "echo ''",
        "echo '=== Step 2: Deploying to Kubernetes ==='",
        "echo ''",
        "",
        "# Check if kubectl can connect to a cluster",
        "if ! kubectl cluster-info &>/dev/null; then",
        "    echo 'Error: Cannot connect to Kubernetes cluster.'",
        "    echo ''",
        "    echo 'Please start a local Kubernetes cluster first:'",
        "    echo '  - minikube: minikube start'",
        "    echo '  - kind: kind create cluster'",
        "    echo '  - Docker Desktop: Enable Kubernetes in Docker Desktop settings'",
        "    echo ''",
        "    echo 'Images have been loaded to Docker and are ready for deployment.'",
        "    exit 1",
        "fi",
        "",
        "kubectl apply -k \"$REPO_ROOT/k8s\"",
        "",
        "echo ''",
        "echo 'Waiting for deployments to be ready...'",
        "kubectl rollout status deployment/codecity-backend -n codecity --timeout=120s",
        "kubectl rollout status deployment/codecity-frontend -n codecity --timeout=120s",
        "",
        "echo ''",
        "echo '=== Deployment complete! ==='",
        "echo ''",
        "echo 'Access the application:'",
        "echo '  kubectl port-forward -n codecity svc/frontend 3000:80'",
        "echo '  Then open: http://localhost:3000'",
    ],
)

sh_binary(
    name = "deploy_all",
    srcs = [":deploy_all_script"],
)
